fix error of index2

--- a/2.1 Deploy-Catalog-Portfolio-Product.ipynb
+++ b/2.1 Deploy-Catalog-Portfolio-Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b01a6f2",
+   "id": "67f81c45",
    "metadata": {},
    "source": [
     "# [모듈 2.1] 카탈로그 포트폴리오 및 프러덕트 배포\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc5844a",
+   "id": "0c178818",
    "metadata": {},
    "source": [
     "# 0. 기존 변수 로딩"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36e03d31",
+   "id": "05ce0613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53fc030f",
+   "id": "14ba7d20",
    "metadata": {},
    "source": [
     "# 1. 카탈로그 프트폴리오 및 프더덕트 CF 확인"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87560a31",
+   "id": "ea86636c",
    "metadata": {},
    "source": [
     "## 1.1 sm-project-sc-portfolio.yaml  파일 다운로드 \n",
@@ -58,15 +58,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1894cd42",
+   "id": "75b16d61",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-04 14:16:38       7210 sm-project-sc-portfolio.yaml\n",
-      "download: s3://sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
+      "2022-02-07 01:08:50       7205 sm-project-sc-portfolio.yaml\n",
+      "download: s3://sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65654b2",
+   "id": "1c0a5cc9",
    "metadata": {},
    "source": [
     "## 1.2 실행 결과의 Output 확인\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8a827d9c",
+   "id": "ae1ac3a1",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6259032",
+   "id": "8af77501",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 파라미터\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15229b2f",
+   "id": "e3f10f97",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c821c8f7",
+   "id": "2603166c",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 생성될 리소스\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "153ca646",
+   "id": "e5fd43c5",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
       "        \u001b[94mDescription\u001b[39;49;00m: SageMaker project to transform and ingest features into a feature\n",
       "          group\n",
       "        \u001b[94mInfo\u001b[39;49;00m:\n",
-      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
+      "          \u001b[94mLoadTemplateFromURL\u001b[39;49;00m: https://s3.amazonaws.com/sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/project-s3-fs-ingestion.yaml\n",
       "      \u001b[94mTags\u001b[39;49;00m:\n",
       "      - \u001b[94mKey\u001b[39;49;00m: sagemaker:studio-visibility\n",
       "        \u001b[94mValue\u001b[39;49;00m: \u001b[33m'\u001b[39;49;00m\u001b[33mtrue\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\n"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b0abf0",
+   "id": "3cf9e3c0",
    "metadata": {},
    "source": [
     "## 1.3 이외 생성될 리소스\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f91afed8",
+   "id": "c4495163",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "620f3066",
+   "id": "8463f056",
    "metadata": {},
    "source": [
     "# 2. AWS Service Catalog 제품 및 포트폴리오 배포\n",
@@ -416,8 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0ac0afda",
+   "execution_count": 7,
+   "id": "d5ffa04a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,22 +428,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0b0c494d",
+   "execution_count": 8,
+   "id": "49e4376e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bucket_name : sagemaker-ap-southeast-2-189546603447\n",
+      "bucket_name : sagemaker-us-east-1-569441333767\n",
       "stack_name : sm-project-sc-portfolio\n",
-      "Bucket Region : ap-southeast-2\n",
-      "SageMaker Studio Domain ID : d-bqnj3arguz1d\n",
-      "SageMaker Execution Role : arn:aws:iam::189546603447:role/MLOps-custom-template-gonsoomoon\n",
-      "CF File:  : https://s3.ap-southeast-2.amazonaws.com/sagemaker-ap-southeast-2-189546603447/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
+      "Bucket Region : us-east-1\n",
+      "SageMaker Studio Domain ID : d-uf1m5smfybav\n",
+      "SageMaker Execution Role : arn:aws:iam::569441333767:role/mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR\n",
+      "CF File:  : https://s3.us-east-1.amazonaws.com/sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
       "{\n",
-      "    \"StackId\": \"arn:aws:cloudformation:ap-southeast-2:189546603447:stack/sm-project-sc-portfolio/082db950-8651-11ec-a081-0236e46e2510\"\n",
+      "    \"StackId\": \"arn:aws:cloudformation:us-east-1:569441333767:stack/sm-project-sc-portfolio/4d0c36d0-87b1-11ec-8917-12a634623527\"\n",
       "}\n"
      ]
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d6092a2",
+   "id": "cee33d7e",
    "metadata": {},
    "source": [
     "## 2.1 클라우드 포메이션 진행 확인\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce7743a0",
+   "id": "56b4baee",
    "metadata": {},
    "source": [
     "![cf_deploy_portfolio.png](img2/cf_deploy_portfolio.png)"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4889d779",
+   "id": "575f7ada",
    "metadata": {},
    "source": [
     "## 2.2 서비스 카탈로그 및 프러덕트 생성 확인\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be06fe49",
+   "id": "b4555cfe",
    "metadata": {},
    "source": [
     "![service_catalog.png](img2/service_catalog.png)"
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d18c6da",
+   "id": "73ac65b6",
    "metadata": {},
    "source": [
     "# 3. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
@@ -537,19 +537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d493a1ac",
+   "execution_count": 9,
+   "id": "dd4d138b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::189546603447:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-1RH56R2UXHR0Z\n",
+      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-16RPJPTM441EB\n",
       "\n",
-      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::189546603447:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-2ZTSTYV19ZE0\n",
+      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-17R55QJZDYQ0W\n",
       "\n",
-      "SM_EXECUTION_ROLE_NAME : MLOps-custom-template-gonsoomoon\n"
+      "SM_EXECUTION_ROLE_NAME : mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR\n"
      ]
     }
    ],
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d23ac0c6",
+   "id": "95b91cc8",
    "metadata": {},
    "source": [
     "# 4. Next\n",
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d30ffb9",
+   "id": "577a366f",
    "metadata": {},
    "source": [
     "---\n",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa680b6",
+   "id": "5d507dcf",
    "metadata": {},
    "source": [
     "## A.1. sm-project-sc-portfolio.yaml 스택 실행시 에러\n",
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "594c780c",
+   "id": "34b1e14f",
    "metadata": {},
    "source": [
     "## A.2. 포트폴리오 및 프러덕트 배포시 에러\n",
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5963b0e9",
+   "id": "36dd1319",
    "metadata": {},
    "source": [
     "![error-deploy-portfolio-product.png](img2/error-deploy-portfolio-product.png)"
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aaedcbe",
+   "id": "fa95d50a",
    "metadata": {},
    "outputs": [],
    "source": []
