run setup00 on event-engine

--- a/notebooks/00-setup.ipynb
+++ b/notebooks/00-setup.ipynb
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SageMaker domain id: d-bqnj3arguz1d\n",
+      "SageMaker domain id: d-uf1m5smfybav\n",
       "Stored 'domain_id' (str)\n"
      ]
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sagemaker-ap-southeast-2-189546603447\n"
+      "sagemaker-us-east-1-569441333767\n"
      ]
     }
    ],
@@ -180,17 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data Wrangler flow upload and a feature group will have this unique suffix: 05-09-06-55-b6dbfc10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set some literals\n",
     "s3_data_prefix = f\"{data_bucket}/feature-store-ingestion-pipeline/dataset/\"\n",
@@ -201,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data Wrangler flow upload and a feature group will have this unique suffix: 05-09-44-11-a856c9ef\n"
+      "Data Wrangler flow upload and a feature group will have this unique suffix: 07-01-25-47-c99ecc2d\n"
      ]
     }
    ],
@@ -233,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,25 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-02-05 09:08:40--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data\n",
+      "--2022-02-07 01:27:28--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 191873 (187K) [application/x-httpd-php]\n",
       "Saving to: ‘abalone.data’\n",
       "\n",
-      "abalone.data        100%[===================>] 187.38K   435KB/s    in 0.4s    \n",
+      "abalone.data        100%[===================>] 187.38K   893KB/s    in 0.2s    \n",
       "\n",
-      "2022-02-05 09:08:41 (435 KB/s) - ‘abalone.data’ saved [191873/191873]\n",
+      "2022-02-07 01:27:29 (893 KB/s) - ‘abalone.data’ saved [191873/191873]\n",
       "\n",
-      "--2022-02-05 09:08:42--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.names\n",
+      "--2022-02-07 01:27:29--  http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.names\n",
       "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
       "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:80... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
@@ -304,7 +296,7 @@
       "\n",
       "abalone.names       100%[===================>]   4.22K  --.-KB/s    in 0s      \n",
       "\n",
-      "2022-02-05 09:08:42 (363 MB/s) - ‘abalone.names’ saved [4319/4319]\n",
+      "2022-02-07 01:27:29 (324 MB/s) - ‘abalone.names’ saved [4319/4319]\n",
       "\n"
      ]
     }
@@ -323,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +458,7 @@
        "4         0.055      7  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,16 +495,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upload: ../dataset/abalone.names to s3://sagemaker-ap-southeast-2-189546603447/feature-store-ingestion-pipeline/dataset/abalone.names\n",
-      "upload: ../dataset/abalone.data to s3://sagemaker-ap-southeast-2-189546603447/feature-store-ingestion-pipeline/dataset/abalone.data\n",
-      "upload: ../dataset/abalone.csv to s3://sagemaker-ap-southeast-2-189546603447/feature-store-ingestion-pipeline/dataset/abalone.csv\n"
+      "upload: ../dataset/abalone.names to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.names\n",
+      "upload: ../dataset/abalone.data to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.data\n",
+      "upload: ../dataset/abalone.csv to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/abalone.csv\n"
      ]
     }
    ],
@@ -530,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +531,7 @@
      "text": [
       "Data uploaded to : \n",
       "\n",
-      "s3://sagemaker-ap-southeast-2-189546603447/feature-store-ingestion-pipeline/dataset/\n"
+      "s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dataset/\n"
      ]
     }
    ],
@@ -675,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +675,7 @@
      "output_type": "stream",
      "text": [
       "DataWrangler Data flow name: dw2-flow\n",
-      "DataWrangler flow output name: a59ef526-30d3-481a-ac31-cb4f978f8413.default\n"
+      "DataWrangler flow output name: c8880ed5-b8a0-4375-899b-1c4d86828152.default\n"
      ]
     }
    ],
@@ -709,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,14 +710,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "upload: ./dw2-flow.flow to s3://sagemaker-ap-southeast-2-189546603447/feature-store-ingestion-pipeline/dw-flow/dw2-flow-05-09-44-11-a856c9ef.flow\n"
+      "upload: ./dw2-flow.flow to s3://sagemaker-us-east-1-569441333767/feature-store-ingestion-pipeline/dw-flow/dw2-flow-07-01-25-47-c99ecc2d.flow\n"
      ]
     }
    ],
@@ -766,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +838,7 @@
        " 'sex_F': 'float'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +885,7 @@
        " {'name': 'record_time', 'type': 'float'}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,23 +974,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'FeatureGroupArn': 'arn:aws:sagemaker:ap-southeast-2:189546603447:feature-group/fg-abalone-05-09-44-11-a856c9ef',\n",
-       " 'ResponseMetadata': {'RequestId': '7d5dab30-cdfb-4336-909c-4bb743729081',\n",
+       "{'FeatureGroupArn': 'arn:aws:sagemaker:us-east-1:569441333767:feature-group/fg-abalone-07-01-25-47-c99ecc2d',\n",
+       " 'ResponseMetadata': {'RequestId': '63a71ef7-7d9d-4925-83f5-2608fec6e065',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '7d5dab30-cdfb-4336-909c-4bb743729081',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '63a71ef7-7d9d-4925-83f5-2608fec6e065',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '113',\n",
-       "   'date': 'Sat, 05 Feb 2022 10:19:57 GMT'},\n",
+       "   'content-length': '108',\n",
+       "   'date': 'Mon, 07 Feb 2022 01:35:48 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,14 +1019,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FeatureGroup FG-abalone-05-09-44-11-a856c9ef successfully created.\n"
+      "Waiting for Feature Group Creation\n",
+      "Waiting for Feature Group Creation\n",
+      "Waiting for Feature Group Creation\n",
+      "Waiting for Feature Group Creation\n",
+      "FeatureGroup FG-abalone-07-01-25-47-c99ecc2d successfully created.\n"
      ]
     }
    ],
@@ -1072,14 +1068,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'FeatureGroupArn': 'arn:aws:sagemaker:ap-southeast-2:189546603447:feature-group/fg-abalone-05-09-44-11-a856c9ef',\n",
-       " 'FeatureGroupName': 'FG-abalone-05-09-44-11-a856c9ef',\n",
+       "{'FeatureGroupArn': 'arn:aws:sagemaker:us-east-1:569441333767:feature-group/fg-abalone-07-01-25-47-c99ecc2d',\n",
+       " 'FeatureGroupName': 'FG-abalone-07-01-25-47-c99ecc2d',\n",
        " 'RecordIdentifierFeatureName': 'record_id',\n",
        " 'EventTimeFeatureName': 'record_time',\n",
        " 'FeatureDefinitions': [{'FeatureName': 'length', 'FeatureType': 'Fractional'},\n",
@@ -1095,25 +1091,25 @@
        "  {'FeatureName': 'sex_F', 'FeatureType': 'Fractional'},\n",
        "  {'FeatureName': 'record_id', 'FeatureType': 'Integral'},\n",
        "  {'FeatureName': 'record_time', 'FeatureType': 'Fractional'}],\n",
-       " 'CreationTime': datetime.datetime(2022, 2, 5, 10, 19, 57, 259000, tzinfo=tzlocal()),\n",
-       " 'OfflineStoreConfig': {'S3StorageConfig': {'S3Uri': 's3://sagemaker-ap-southeast-2-189546603447',\n",
-       "   'ResolvedOutputS3Uri': 's3://sagemaker-ap-southeast-2-189546603447/189546603447/sagemaker/ap-southeast-2/offline-store/FG-abalone-05-09-44-11-a856c9ef-1644056397/data'},\n",
+       " 'CreationTime': datetime.datetime(2022, 2, 7, 1, 35, 47, 967000, tzinfo=tzlocal()),\n",
+       " 'OfflineStoreConfig': {'S3StorageConfig': {'S3Uri': 's3://sagemaker-us-east-1-569441333767',\n",
+       "   'ResolvedOutputS3Uri': 's3://sagemaker-us-east-1-569441333767/569441333767/sagemaker/us-east-1/offline-store/FG-abalone-07-01-25-47-c99ecc2d-1644197747/data'},\n",
        "  'DisableGlueTableCreation': False,\n",
-       "  'DataCatalogConfig': {'TableName': 'fg-abalone-05-09-44-11-a856c9ef-1644056397',\n",
+       "  'DataCatalogConfig': {'TableName': 'fg-abalone-07-01-25-47-c99ecc2d-1644197747',\n",
        "   'Catalog': 'AwsDataCatalog',\n",
        "   'Database': 'sagemaker_featurestore'}},\n",
-       " 'RoleArn': 'arn:aws:iam::189546603447:role/MLOps-custom-template-gonsoomoon',\n",
+       " 'RoleArn': 'arn:aws:iam::569441333767:role/mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR',\n",
        " 'FeatureGroupStatus': 'Created',\n",
-       " 'ResponseMetadata': {'RequestId': '9129afb2-1e9a-4174-a072-b4a0c705459c',\n",
+       " 'ResponseMetadata': {'RequestId': '74f69e64-368c-4c8f-b03a-e101b68cbe86',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '9129afb2-1e9a-4174-a072-b4a0c705459c',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '74f69e64-368c-4c8f-b03a-e101b68cbe86',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '1894',\n",
-       "   'date': 'Sat, 05 Feb 2022 10:27:06 GMT'},\n",
+       "   'content-length': '1917',\n",
+       "   'date': 'Mon, 07 Feb 2022 01:36:18 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,15 +1127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prepared query SELECT * FROM \"fg-abalone-05-09-44-11-a856c9ef-1644056397\"\n",
-      "AthenaQuery(catalog='AwsDataCatalog', database='sagemaker_featurestore', table_name='fg-abalone-05-09-44-11-a856c9ef-1644056397', sagemaker_session=<sagemaker.session.Session object at 0x7fdc33d551d0>, _current_query_execution_id=None, _result_bucket=None, _result_file_prefix=None)\n"
+      "Prepared query SELECT * FROM \"fg-abalone-07-01-25-47-c99ecc2d-1644197747\"\n",
+      "AthenaQuery(catalog='AwsDataCatalog', database='sagemaker_featurestore', table_name='fg-abalone-07-01-25-47-c99ecc2d-1644197747', sagemaker_session=<sagemaker.session.Session object at 0x7fea7c638d90>, _current_query_execution_id=None, _result_bucket=None, _result_file_prefix=None)\n"
      ]
     }
    ],
@@ -1154,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1219,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1269,15 +1265,15 @@
       "Stored variables and their in-db values:\n",
       "abalone_dataset_file_name             -> 'abalone.csv'\n",
       "abalone_dataset_local_url             -> '../dataset/abalone.csv'\n",
-      "data_bucket                           -> 'sagemaker-ap-southeast-2-189546603447'\n",
-      "domain_id                             -> 'd-bqnj3arguz1d'\n",
-      "dw_flow_file_url                      -> 's3://sagemaker-ap-southeast-2-189546603447/featur\n",
-      "dw_output_name                        -> 'a59ef526-30d3-481a-ac31-cb4f978f8413.default'\n",
-      "execution_role                        -> 'arn:aws:iam::189546603447:role/MLOps-custom-templ\n",
-      "feature_group_name                    -> 'FG-abalone-05-09-44-11-a856c9ef'\n",
-      "s3_data_prefix                        -> 'sagemaker-ap-southeast-2-189546603447/feature-sto\n",
-      "s3_flow_prefix                        -> 'sagemaker-ap-southeast-2-189546603447/feature-sto\n",
-      "s3_fs_query_output_prefix             -> 'sagemaker-ap-southeast-2-189546603447/feature-sto\n"
+      "data_bucket                           -> 'sagemaker-us-east-1-569441333767'\n",
+      "domain_id                             -> 'd-uf1m5smfybav'\n",
+      "dw_flow_file_url                      -> 's3://sagemaker-us-east-1-569441333767/feature-sto\n",
+      "dw_output_name                        -> 'c8880ed5-b8a0-4375-899b-1c4d86828152.default'\n",
+      "execution_role                        -> 'arn:aws:iam::569441333767:role/mod-6297809195fe48\n",
+      "feature_group_name                    -> 'FG-abalone-07-01-25-47-c99ecc2d'\n",
+      "s3_data_prefix                        -> 'sagemaker-us-east-1-569441333767/feature-store-in\n",
+      "s3_flow_prefix                        -> 'sagemaker-us-east-1-569441333767/feature-store-in\n",
+      "s3_fs_query_output_prefix             -> 'sagemaker-us-east-1-569441333767/feature-store-in\n"
      ]
     }
    ],
@@ -1316,7 +1312,7 @@
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-southeast-2:452832661640:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
