--- a/2.1 Deploy-Catalog-Portfolio-Product.ipynb
+++ b/2.1 Deploy-Catalog-Portfolio-Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "67f81c45",
+   "id": "448c8ac6",
    "metadata": {},
    "source": [
     "# [모듈 2.1] 카탈로그 포트폴리오 및 프러덕트 배포\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c178818",
+   "id": "b8382b12",
    "metadata": {},
    "source": [
     "# 0. 기존 변수 로딩"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "05ce0613",
+   "id": "52676ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ba7d20",
+   "id": "9db6b623",
    "metadata": {},
    "source": [
     "# 1. 카탈로그 프트폴리오 및 프더덕트 CF 확인"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea86636c",
+   "id": "957a9367",
    "metadata": {},
    "source": [
     "## 1.1 sm-project-sc-portfolio.yaml  파일 다운로드 \n",
@@ -58,14 +58,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "75b16d61",
+   "id": "306b19fc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-02-07 01:08:50       7205 sm-project-sc-portfolio.yaml\n",
+      "2022-02-07 03:15:31       7205 sm-project-sc-portfolio.yaml\n",
       "download: s3://sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml to ./sm-project-sc-portfolio.yaml\n"
      ]
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0a5cc9",
+   "id": "d397bab8",
    "metadata": {},
    "source": [
     "## 1.2 실행 결과의 Output 확인\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ae1ac3a1",
+   "id": "89fa7cc1",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af77501",
+   "id": "7f4876d5",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 파라미터\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e3f10f97",
+   "id": "90312a93",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2603166c",
+   "id": "9d894ad9",
    "metadata": {},
    "source": [
     "## 1.2 sm-project-sc-portfolio.yaml 생성될 리소스\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e5fd43c5",
+   "id": "a129df74",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf9e3c0",
+   "id": "c1bd5eaa",
    "metadata": {},
    "source": [
     "## 1.3 이외 생성될 리소스\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c4495163",
+   "id": "074f944e",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8463f056",
+   "id": "0d94afaf",
    "metadata": {},
    "source": [
     "# 2. AWS Service Catalog 제품 및 포트폴리오 배포\n",
@@ -416,8 +416,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d5ffa04a",
+   "execution_count": 10,
+   "id": "e8c9d239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,8 +428,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "49e4376e",
+   "execution_count": 11,
+   "id": "a0602a98",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
       "SageMaker Execution Role : arn:aws:iam::569441333767:role/mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR\n",
       "CF File:  : https://s3.us-east-1.amazonaws.com/sagemaker-us-east-1-569441333767/amazon-sagemaker-reusable-components/sm-project-sc-portfolio.yaml\n",
       "{\n",
-      "    \"StackId\": \"arn:aws:cloudformation:us-east-1:569441333767:stack/sm-project-sc-portfolio/4d0c36d0-87b1-11ec-8917-12a634623527\"\n",
+      "    \"StackId\": \"arn:aws:cloudformation:us-east-1:569441333767:stack/sm-project-sc-portfolio/54a6fe20-87c5-11ec-8b46-0a1393eb7b59\"\n",
       "}\n"
      ]
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee33d7e",
+   "id": "01098728",
    "metadata": {},
    "source": [
     "## 2.1 클라우드 포메이션 진행 확인\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56b4baee",
+   "id": "07fe3ec5",
    "metadata": {},
    "source": [
     "![cf_deploy_portfolio.png](img2/cf_deploy_portfolio.png)"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "575f7ada",
+   "id": "338a399e",
    "metadata": {},
    "source": [
     "## 2.2 서비스 카탈로그 및 프러덕트 생성 확인\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4555cfe",
+   "id": "0b69ac1f",
    "metadata": {},
    "source": [
     "![service_catalog.png](img2/service_catalog.png)"
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73ac65b6",
+   "id": "bf3885e3",
    "metadata": {},
    "source": [
     "# 3. 서비스 카탈로그 런치 및 SageMaker 실행 IAM 역할에 권한 추가\n",
@@ -537,19 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "dd4d138b",
+   "execution_count": 14,
+   "id": "d3cd0846",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-16RPJPTM441EB\n",
+      "SM_SC_FS_INGESTION_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerServiceCatalogFSIngestionProductPolicy-TZJUZRD0GNHE\n",
       "\n",
-      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-17R55QJZDYQ0W\n",
+      "SM_EXECUTION_ROLE_POLICY_ARN : arn:aws:iam::569441333767:policy/sm-project-sc-portfolio-AmazonSageMakerExecutionRolePolicy-1GNOW6L20RNJG\n",
       "\n",
-      "SM_EXECUTION_ROLE_NAME : mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR\n"
+      "SM_EXECUTION_ROLE_NAME : mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR\n",
+      "mod-6297809195fe4845-SageMakerExecutionRole-1IFNRLV9UK3AR : Additional policies attached\n"
      ]
     }
    ],
@@ -586,12 +587,44 @@
     "\n",
     "aws iam attach-role-policy \\\n",
     "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
-    "    --policy-arn $SM_EXECUTION_ROLE_POLICY_ARN"
+    "    --policy-arn $SM_EXECUTION_ROLE_POLICY_ARN\n",
+    "\n",
+    "aws iam attach-role-policy \\\n",
+    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
+    "    --policy-arn \"arn:aws:iam::aws:policy/IAMFullAccess\"\n",
+    "\n",
+    "echo $SM_EXECUTION_ROLE_NAME  : Additional policies attached to cleanup later\n",
+    "    \n",
+    "aws iam attach-role-policy \\\n",
+    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
+    "    --policy-arn arn:aws:iam::aws:policy/IAMFullAccess\n",
+    "\n",
+    "aws iam attach-role-policy \\\n",
+    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
+    "    --policy-arn arn:aws:iam::aws:policy/AWSCloudFormationFullAccess\n",
+    "\n",
+    "aws iam attach-role-policy \\\n",
+    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
+    "    --policy-arn arn:aws:iam::aws:policy/AWSCodeBuildAdminAccess\n",
+    "\n",
+    "aws iam attach-role-policy \\\n",
+    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
+    "    --policy-arn arn:aws:iam::aws:policy/AWSServiceCatalogAdminFullAccess\n",
+    "\n",
+    "aws iam attach-role-policy \\\n",
+    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
+    "    --policy-arn arn:aws:iam::aws:policy/AWSLambda_FullAccess\n",
+    "\n",
+    "aws iam attach-role-policy \\\n",
+    "    --role-name  $SM_EXECUTION_ROLE_NAME \\\n",
+    "    --policy-arn arn:aws:iam::aws:policy/AmazonS3FullAccess\n",
+    "\n",
+    "                    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "95b91cc8",
+   "id": "ee38fec8",
    "metadata": {},
    "source": [
     "# 4. Next\n",
@@ -600,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577a366f",
+   "id": "e41211cd",
    "metadata": {},
    "source": [
     "---\n",
@@ -610,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d507dcf",
+   "id": "67049085",
    "metadata": {},
    "source": [
     "## A.1. sm-project-sc-portfolio.yaml 스택 실행시 에러\n",
@@ -645,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b1e14f",
+   "id": "01fde69b",
    "metadata": {},
    "source": [
     "## A.2. 포트폴리오 및 프러덕트 배포시 에러\n",
@@ -656,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36dd1319",
+   "id": "5ee1a0b5",
    "metadata": {},
    "source": [
     "![error-deploy-portfolio-product.png](img2/error-deploy-portfolio-product.png)"
@@ -665,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa95d50a",
+   "id": "4747c493",
    "metadata": {},
    "outputs": [],
    "source": []
